Add own modifications